# gbm_fin_diff

./: .gitignore  LICENSE  README.md  eval_checkpoint.py  eval_log.jsonl  pyproject.toml  requirements.txt  show_eval_log.py
gbm_financial/: __init__.py  config.yaml  data.py  metrics.py  run.py  score_network.py  sde.py  train.py  train_l4.py  validate.py
save/gbm_financial/: results.json
save/gbm_financial/gbm_exponential/: full_eval_results.json  results.json
scripts/: eval_l4_data.py  plot_from_checkpoint.py  retrain_and_plot.py  run_gbm_logprice_sigma1.py  run_logreturns_quick.py
